Update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
   "rules": {
     "indent": [
       "error",
-      2,
-      { "SwitchCase": 1 }
+      2
     ],
     "linebreak-style": [
       "error",
@@ -112,6 +111,9 @@
       }
     ],
     "new-parens": [
+      "error"
+    ],
+    "no-lonely-if": [
       "error"
     ],
     "no-trailing-spaces": [
